--- a/log4j-transform-parent/pom.xml
+++ b/log4j-transform-parent/pom.xml
@@ -47,7 +47,6 @@
     <!-- plugin versions -->
     <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
     <maven-invoker-plugin.version>3.6.1</maven-invoker-plugin.version>
-    <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
     <surefire.version>3.0.0-M7</surefire.version>
 
   </properties>
@@ -158,12 +157,6 @@
           <version>${maven-invoker-plugin.version}</version>
         </plugin>
 
-        <plugin>
-          <groupId>org.apache.maven</groupId>
-          <artifactId>maven-shade-plugin</artifactId>
-          <version>${maven-shade-plugin.version}</version>
-        </plugin>
-
       </plugins>
     </pluginManagement>
   </build>
@@ -220,7 +213,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <version>${maven-shade-plugin.version}</version>
             <executions>
               <execution>
                 <id>shade-jar-with-dependencies</id>
@@ -234,6 +226,7 @@
                       <excludes>
                         <exclude>module-info.class</exclude>
                         <exclude>META-INF/versions/*/module-info.class</exclude>
+                        <exclude>META-INF/DEPENDENCIES</exclude>
                         <exclude>META-INF/MANIFEST.MF</exclude>
                       </excludes>
                     </filter>
@@ -244,7 +237,11 @@
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer" />
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer" />
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                      <manifestEntries>
+                        <Multi-Release>true</Multi-Release>
+                      </manifestEntries>
+                    </transformer>
                   </transformers>
                 </configuration>
               </execution>
