--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,15 @@
     <maven.site.skip>true</maven.site.skip>
     <maven.site.deploy.skip>true</maven.site.deploy.skip>
 
+    <!-- `project.build.outputTimestamp` is required to be present for reproducible builds.
+     We actually inherit one from the `org.apache:apache` through our parent `org.apache.logging:logging-parent`.
+     Though inheriting this property has two undesired consequences:
+     1. `artifact:compare` dumps an `ERROR` log stating that this `property should not be inherited but defined` (apache/logging-parent#50)
+     2. This value is employed in various places while creating the distribution
+     To mitigate these, we define a *dummy* value here and let the CI replace it during a release.
+     Hence, *DO NOT MANUALLY EDIT THIS VALUE*! -->
+    <project.build.outputTimestamp>2024-09-24T13:33:09Z</project.build.outputTimestamp>
+
   </properties>
 
   <!-- `dependencyManagement` must only contain `log4j-transform` modules and nothing else!
