--- a/.gitattributes
+++ b/.gitattributes
@@ -13,8 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Checked by Spotless (LF line endings)
-*.java text eol=lf
-*.xml  text eol=lf
-*.yaml text eol=lf
-*.yml  text eol=lf
+# All text files with LF line endings
+* text=auto eol=lf
+# Maven Wrapper cmd script
+/mvnw.cmd eol=crlf
+# Maven Wrapper need LF line endings
+/.mvn/wrapper/maven-wrapper.properties eol=lf
